fixed code with linter

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint":"eslint './src/**/*.{js,jsx}'"
+    "lint":"eslint './src/**/*.{js,jsx}'",
+    "lint-fix":"eslint './src/**/*.{js,jsx}' --fix" 
     
   },
   "eslintConfig": {
