--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     ],
     "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true 
-    }
+    },
+    "pyhton.pythonPath":"api/.venv/scripts/python"
 }
