enabled pilint and black code formatter in python

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,4 +9,13 @@
     },
 
     //"python.pythonPath":"api/.venv/Scripts/python"
+    "python.linting.pycodestyleEnabled": true,
+    "python.linting.pycodestyleArgs": [
+        "--max-line-length=88"
+    ],
+    "python.linting.pylintEnabled": true,
+    "python.formatting.provider":"black",
+    "[python]":{
+        "editor.formatOnSave": true    
+    }
 }
