--- a/api/Pipfile
+++ b/api/Pipfile
@@ -10,6 +10,9 @@ python-dotenv = "*"
 flask-cors = "==3.0.10"
 
 [dev-packages]
+black = "*"
+pylint = "*"
+pycodestyle = "*"
 
 [requires]
 python_version = "3.10"
