--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "react": "^18.0.0",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2"
   }
