--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "react": "^18.0.0",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^18.0.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -22,13 +23,6 @@
     "eject": "react-scripts eject",
     "lint": "eslint './src/**/*.{js,jsx}'",
     "lint-fix": "eslint './src/**/*.{js,jsx}' --fix"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest",
-      "plugin:prettier/recommended"
-    ]
   },
   "browserslist": {
     "production": [
